gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nanshan-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
    # - "order-nanshan.apps.cluster.sandbox1680.opentlc.com"
