nv2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nanshan-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
    # - "order-nanshan.apps.cluster.sandbox1680.opentlc.com"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-vs
spec:
  hosts:
  - "*"
  gateways:
  - nanshan-gateway
  http:
  - match:
    - uri:
        prefix: /quote
    route:
    - destination:
        host: order
        port:
          number: 8080
  # - match:
    # - uri:
        # prefix: /products
    # route:
    # - destination:
        # host: product
        # port:
          # number: 8080
  # - match:
    # - uri:
        # prefix: /customers
    # route:
    # - destination:
        # host: msa-test-git
        # port:
          # number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product
spec:
  hosts:
  - product
  http:
  - route:
    - destination:
        host: product
        subset: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: msa-test-git
spec:
  hosts:
  - msa-test-git
  http:
  - route:
    - destination:
        host: msa-test-git
        subset: v1
