order-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-vs
spec:
  hosts:
  - "*"
  gateways:
  - nanshan-gateway
  http:
  - match:
    - uri:
        prefix: /quote
    route:
    - destination:
        host: order
        port:
          number: 8080
  # - match:
    # - uri:
        # prefix: /products
    # route:
    # - destination:
        # host: product
        # port:
          # number: 8080
  - match:
    - uri:
        prefix: /customers
    route:
    - destination:
        host: msa-test-git
        port:
          number: 8080
