prod-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product
spec:
  hosts:
    - product
  http:
  - route:
    - destination:
        host: product
        subset: v1
      weight: 20
    - destination:
        host: product
        subset: v2
      weight: 80
